13082
```scala
scala> def f(x: Int) = x * x
f: (Int)Int

scala> (f _)
res1: (Int) => Int = <function>

scala> (f _).apply(10)
res2: Int = 100

scala> (f _)(10)
<console>:6: error: type mismatch;
 found   : (Int)Int
 required: (?) => ?
       (f _)(10)
        ^
```

The type of expression (f _) is (Int) => Int. So (f _) should be appliable function. The expression (f _).apply(10) is successful but the expression (f _)(10) produces error. The two expressions should be equivalent.
